messaging_app/django-development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2  # how many app instances to run
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: acacore/messaging_app:latest  # replace with your image
          ports:
            - containerPort: 8000
