messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 3  # how many app instances to run
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      name: django-green
      labels:
        app: django
        version: green
    spec:
      containers:
        - name: django
          image: acacore/messaging_app:latest  # new version/tag
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
