messaging_app/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer  # or NodePort for local clusters
