messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  selector:
    app: django
    version: blue  # start with blue deployment
  ports:
    - protocol: TCP
      port: 80          # exposed service port
      targetPort: 8000  # container port of Django app
  type: ClusterIP
