messaging_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mydjangoapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
  tls:
    - hosts:
        - mydjangoapp.example.com
      secretName: django-tls
